Java and Maven updates